--- a/2 P1 Project/2-p1-project.ipynb
+++ b/2 P1 Project/2-p1-project.ipynb
@@ -272,7 +272,7 @@
     "\n",
     "CREATE TABLE visit (\n",
     "    idv Integer,\n",
-    "    date Date NOT NULL,\n",
+    "    date Timestamp NOT NULL,\n",
     "    PRIMARY KEY (idv)\n",
     ");\n",
     "\n",
