--- a/2 P1 Project/2-p1-project.ipynb
+++ b/2 P1 Project/2-p1-project.ipynb
@@ -13,11 +13,11 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "* istXXXXXXX1 FirstName1 LastName1 (33%)\n",
+    "* ist199271 Margarida Estrela (33%)\n",
     "  \n",
-    "* istXXXXXXX2 FirstName2 LastName2 (33%)\n",
+    "* ist199891 André Teixeira (33%)\n",
     "  \n",
-    "* istXXXXXXX3 FirstName3 LastName3 (33%)"
+    "* ist1100096 Tiago Costa (33%)"
    ]
   },
   {
@@ -25,9 +25,9 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "Prof. FirstName LastName (and Prof. FirstName LastName)\n",
+    "Prof. Flávio Ramos (Prof. João Marques and Prof. Carlos Felgueiras in the labs)\n",
     "\n",
-    "Lab Shift number: PBXX"
+    "Lab Shift number: PB02"
    ]
   },
   {
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
