--- a/labs/Lab01.ipynb
+++ b/labs/Lab01.ipynb
@@ -140,20 +140,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81e3b56-bae1-401a-a3a2-79b204809f5b",
-   "metadata": {},
+   "id": "8404554f-3036-4574-854b-26a099035201",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:20:04.252503Z",
+     "iopub.status.busy": "2024-12-28T22:20:04.252295Z",
+     "iopub.status.idle": "2024-12-28T22:20:04.256111Z",
+     "shell.execute_reply": "2024-12-28T22:20:04.255468Z",
+     "shell.execute_reply.started": "2024-12-28T22:20:04.252490Z"
+    }
+   },
    "source": [
     "7. Grant all privileges on the database `bank` to the user `bank`.\n",
     "\n",
     "```sql\n",
-    "GRANT ALL ON DATABASE bank TO bank; ⮐\n",
+    "GRANT ALL ON DATABASE bank TO bank; \n",
     "```"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "46854ce1-87b3-4869-ab81-1fdeea3c7eff",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a106856f-d503-447e-85bb-dfd90fbf6828",
    "metadata": {},
+   "outputs": [],
    "source": [
     "8. Exit the program using the command \\\\q ⮐."
    ]
@@ -407,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
