--- a/2 P2 Project/G2-p2-project.ipynb
+++ b/2 P2 Project/G2-p2-project.ipynb
@@ -2505,8 +2505,7 @@
     "                id=\"date\"\n",
     "                type=\"datetime-local\"\n",
     "                step=\"1\"\n",
-    "                value=\"{{ request.form['date'] or player['date'] }}\"\n",
-    "                required />\n",
+    "                value=\"{{ request.form['date'] or player['date'] }}\"/>\n",
     "        <input type=\"submit\" value=\"Save\" />\n",
     "    </form>\n",
     "{% endblock content %}\n",
@@ -2535,9 +2534,9 @@
     "\n",
     "    error = None\n",
     "\n",
-    "    if not date:\n",
+    "    if date == \"\":\n",
     "        error = \"Date is required.\"\n",
-    "    if not is_valid_date(date):\n",
+    "    elif not is_valid_date(date):\n",
     "        error = \"Date is required to be in the format 'DD/MM/YYYY, HH:MM:SS'.\"\n",
     "\n",
     "    if error is not None:\n",
@@ -2560,7 +2559,7 @@
     "        # The connection is returned to the pool at the end of the `connection()` context but,\n",
     "        # because it is not in a transaction state, no COMMIT is executed.\n",
     "\n",
-    "        return redirect(url_for(\"players_index\"))\n",
+    "    return redirect(url_for(\"players_index\"))\n",
     "```"
    ]
   }
