--- a/2 P2 Project/G2-p2-project.ipynb
+++ b/2 P2 Project/G2-p2-project.ipynb
@@ -125,11 +125,11 @@
    "id": "10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-06T10:55:25.224216Z",
-     "iopub.status.busy": "2025-01-06T10:55:25.224056Z",
-     "iopub.status.idle": "2025-01-06T10:55:25.755074Z",
-     "shell.execute_reply": "2025-01-06T10:55:25.754677Z",
-     "shell.execute_reply.started": "2025-01-06T10:55:25.224205Z"
+     "iopub.execute_input": "2025-01-06T11:38:10.795557Z",
+     "iopub.status.busy": "2025-01-06T11:38:10.795174Z",
+     "iopub.status.idle": "2025-01-06T11:38:10.808679Z",
+     "shell.execute_reply": "2025-01-06T11:38:10.808267Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:10.795522Z"
     },
     "tags": []
    },
@@ -490,15 +490,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-04T13:03:37.266413Z",
-     "iopub.status.busy": "2025-01-04T13:03:37.266082Z",
-     "iopub.status.idle": "2025-01-04T13:03:37.541483Z",
-     "shell.execute_reply": "2025-01-04T13:03:37.540424Z",
-     "shell.execute_reply.started": "2025-01-04T13:03:37.266401Z"
+     "iopub.execute_input": "2025-01-06T11:38:17.203926Z",
+     "iopub.status.busy": "2025-01-06T11:38:17.203698Z",
+     "iopub.status.idle": "2025-01-06T11:38:17.317949Z",
+     "shell.execute_reply": "2025-01-06T11:38:17.317288Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:17.203913Z"
     }
    },
    "outputs": [
@@ -532,16 +532,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "22",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2025-01-06T10:55:29.944128Z",
-     "iopub.status.busy": "2025-01-06T10:55:29.943873Z",
-     "iopub.status.idle": "2025-01-06T10:55:36.527932Z",
-     "shell.execute_reply": "2025-01-06T10:55:36.527543Z",
-     "shell.execute_reply.started": "2025-01-06T10:55:29.944113Z"
+     "iopub.execute_input": "2025-01-06T11:38:24.996580Z",
+     "iopub.status.busy": "2025-01-06T11:38:24.996339Z",
+     "iopub.status.idle": "2025-01-06T11:38:34.286793Z",
+     "shell.execute_reply": "2025-01-06T11:38:34.286284Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:24.996565Z"
     },
     "scrolled": true,
     "slideshow": {
@@ -554,39 +554,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-06T10:55:30.008000Z LOG pgloader version \"3.6.10~devel\"\n",
-      "2025-01-06T10:55:30.009000Z LOG Data errors in '/tmp/pgloader/'\n",
-      "2025-01-06T10:55:30.009000Z LOG Parsing commands from file #P\"/home/jovyan/work/ISDB/2 P2 Project/command-file.txt\"\n",
-      "2025-01-06T10:55:30.093000Z LOG Migrating from #<SQLITE-CONNECTION sqlite:///home/jovyan/data/database.sqlite {1006B16223}>\n",
-      "2025-01-06T10:55:30.093000Z LOG Migrating into #<PGSQL-CONNECTION pgsql://db@postgres:5432/db {1006B163A3}>\n",
-      "2025-01-06T10:55:36.125000Z LOG report summary reset\n",
+      "2025-01-06T11:38:25.009000Z LOG pgloader version \"3.6.10~devel\"\n",
+      "2025-01-06T11:38:25.196000Z LOG Migrating from #<SQLITE-CONNECTION sqlite:///home/jovyan/data/database.sqlite {1006A45883}>\n",
+      "2025-01-06T11:38:25.196000Z LOG Migrating into #<PGSQL-CONNECTION pgsql://db@postgres:5432/db {1006A45A03}>\n",
+      "2025-01-06T11:38:33.720953Z LOG report summary reset\n",
       "             table name     errors       rows      bytes      total time\n",
       "-----------------------  ---------  ---------  ---------  --------------\n",
       "                  fetch          0          0                     0.000s\n",
-      "        fetch meta data          0         50                     0.037s\n",
-      "         Create Schemas          0          0                     0.000s\n",
-      "       Create SQL Types          0          0                     0.002s\n",
-      "          Create tables          0         14                     0.043s\n",
-      "         Set Table OIDs          0          7                     0.003s\n",
+      "        fetch meta data          0         50                     0.057s\n",
+      "         Create Schemas          0          0                     0.001s\n",
+      "       Create SQL Types          0          0                     0.003s\n",
+      "          Create tables          0         14                     0.025s\n",
+      "         Set Table OIDs          0          7                     0.004s\n",
       "-----------------------  ---------  ---------  ---------  --------------\n",
-      "      player_attributes          0     183929    28.2 MB          1.580s\n",
-      "                  match          0      25597   266.9 MB          3.802s\n",
-      "                 player          0      11060   688.0 kB          0.056s\n",
-      "                 league          0         11     0.3 kB          0.046s\n",
-      "                   team          0        296     9.5 kB          0.093s\n",
-      "                country          0         11     0.1 kB          0.012s\n",
-      "        team_attributes          0       1451   210.4 kB          0.013s\n",
+      "      player_attributes          0     183929    28.2 MB          2.052s\n",
+      "                 player          0      11060   688.0 kB          0.098s\n",
+      "                 league          0         11     0.3 kB          0.065s\n",
+      "                   team          0        296     9.5 kB          0.127s\n",
+      "                  match          0      25597   266.9 MB          5.574s\n",
+      "                country          0         11     0.1 kB          0.001s\n",
+      "        team_attributes          0       1451   210.4 kB          0.016s\n",
       "-----------------------  ---------  ---------  ---------  --------------\n",
-      "COPY Threads Completion          0          4                     5.385s\n",
-      "         Create Indexes          0         14                     0.256s\n",
-      " Index Build Completion          0         14                     0.174s\n",
-      "        Reset Sequences          0          7                     0.042s\n",
+      "COPY Threads Completion          0          4                     7.627s\n",
+      "         Create Indexes          0         14                     0.265s\n",
+      " Index Build Completion          0         14                     0.258s\n",
+      "        Reset Sequences          0          7                     0.056s\n",
       "           Primary Keys          0          7                     0.004s\n",
-      "    Create Foreign Keys          0         29                     0.245s\n",
+      "    Create Foreign Keys          0         29                     0.367s\n",
       "        Create Triggers          0          0                     0.000s\n",
       "       Install Comments          0          0                     0.000s\n",
       "-----------------------  ---------  ---------  ---------  --------------\n",
-      "      Total import time          ✓     222355   296.0 MB          6.106s\n"
+      "      Total import time          ✓     222355   296.0 MB          8.577s\n"
      ]
     }
    ],
@@ -604,15 +602,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "24",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-06T10:55:36.528629Z",
-     "iopub.status.busy": "2025-01-06T10:55:36.528524Z",
-     "iopub.status.idle": "2025-01-06T10:55:36.566073Z",
-     "shell.execute_reply": "2025-01-06T10:55:36.565583Z",
-     "shell.execute_reply.started": "2025-01-06T10:55:36.528618Z"
+     "iopub.execute_input": "2025-01-06T11:38:38.073408Z",
+     "iopub.status.busy": "2025-01-06T11:38:38.073153Z",
+     "iopub.status.idle": "2025-01-06T11:38:38.158804Z",
+     "shell.execute_reply": "2025-01-06T11:38:38.158175Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:38.073385Z"
     }
    },
    "outputs": [
@@ -635,15 +633,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-06T10:55:36.566669Z",
-     "iopub.status.busy": "2025-01-06T10:55:36.566493Z",
-     "iopub.status.idle": "2025-01-06T10:55:36.598165Z",
-     "shell.execute_reply": "2025-01-06T10:55:36.597620Z",
-     "shell.execute_reply.started": "2025-01-06T10:55:36.566647Z"
+     "iopub.execute_input": "2025-01-06T11:38:42.507028Z",
+     "iopub.status.busy": "2025-01-06T11:38:42.506826Z",
+     "iopub.status.idle": "2025-01-06T11:38:42.552124Z",
+     "shell.execute_reply": "2025-01-06T11:38:42.551810Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:42.507014Z"
     },
     "vscode": {
      "languageId": "sql"
@@ -1710,7 +1708,7 @@
        "+------------------+---------+----------+-----------------------------------+---------------+---------+"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,15 +1745,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-06T10:08:48.817141Z",
-     "iopub.status.busy": "2025-01-06T10:08:48.816992Z",
-     "iopub.status.idle": "2025-01-06T10:08:48.873069Z",
-     "shell.execute_reply": "2025-01-06T10:08:48.872526Z",
-     "shell.execute_reply.started": "2025-01-06T10:08:48.817130Z"
+     "iopub.execute_input": "2025-01-06T11:38:52.058098Z",
+     "iopub.status.busy": "2025-01-06T11:38:52.057912Z",
+     "iopub.status.idle": "2025-01-06T11:38:52.067870Z",
+     "shell.execute_reply": "2025-01-06T11:38:52.067560Z",
+     "shell.execute_reply.started": "2025-01-06T11:38:52.058085Z"
     },
     "vscode": {
      "languageId": "sql"
@@ -1768,25 +1766,86 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>count</th>\n",
+       "            <th>player_api_id</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>296</td>\n",
+       "            <td>30893</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "+-------+\n",
-       "| count |\n",
-       "+-------+\n",
-       "|  296  |\n",
-       "+-------+"
+       "+---------------+\n",
+       "| player_api_id |\n",
+       "+---------------+\n",
+       "|     30893     |\n",
+       "+---------------+"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql psql\n",
+    "\n",
+    "SELECT player_api_id\n",
+    "FROM player\n",
+    "WHERE player_name = 'Cristiano Ronaldo';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7689355b-8d59-4b07-8784-73b03a09a670",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-06T11:49:31.913072Z",
+     "iopub.status.busy": "2025-01-06T11:49:31.912739Z",
+     "iopub.status.idle": "2025-01-06T11:49:31.939384Z",
+     "shell.execute_reply": "2025-01-06T11:49:31.939048Z",
+     "shell.execute_reply.started": "2025-01-06T11:49:31.913057Z"
+    },
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>team_short_name</th>\n",
+       "            <th>team_long_name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>MUN</td>\n",
+       "            <td>Manchester United</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>REA</td>\n",
+       "            <td>Real Madrid CF</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-----------------+-------------------+\n",
+       "| team_short_name |   team_long_name  |\n",
+       "+-----------------+-------------------+\n",
+       "|       MUN       | Manchester United |\n",
+       "|       REA       |   Real Madrid CF  |\n",
+       "+-----------------+-------------------+"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,9 +1854,19 @@
     "%%sql psql\n",
     "\n",
     "-- WILL NOT BE EVALUATED - We will be implementing a solution for this problem in the next section.\n",
-    "SELECT DISTINCT COUNT(DISTINCT team_api_id)\n",
-    "FROM Team t\n",
-    "JOIN match m on t.team_api_id = m.home_team_api_id OR t.team_api_id = m.away_team_api_id"
+    "SELECT DISTINCT t.team_short_name, t.team_long_name\n",
+    "FROM match m\n",
+    "JOIN team t ON t.team_api_id = m.home_team_api_id OR t.team_api_id = m.away_team_api_id\n",
+    "WHERE \n",
+    "   (m.home_team_api_id = t.team_api_id AND \n",
+    "    (m.home_player_1 = 30893 OR m.home_player_2 = 30893 OR m.home_player_3 = 30893 OR m.home_player_4 = 30893 \n",
+    "     OR m.home_player_5 = 30893 OR m.home_player_6 = 30893 OR m.home_player_7 = 30893 OR m.home_player_8 = 30893 \n",
+    "     OR m.home_player_9 = 30893 OR m.home_player_10 = 30893 OR m.home_player_11 = 30893)) \n",
+    "   OR \n",
+    "   (m.away_team_api_id = t.team_api_id AND \n",
+    "    (m.away_player_1 = 30893 OR m.away_player_2 = 30893 OR m.away_player_3 = 30893 OR m.away_player_4 = 30893 \n",
+    "     OR m.away_player_5 = 30893 OR m.away_player_6 = 30893 OR m.away_player_7 = 30893 OR m.away_player_8 = 30893 \n",
+    "     OR m.away_player_9 = 30893 OR m.away_player_10 = 30893 OR m.away_player_11 = 30893));\n"
    ]
   },
   {
