--- a/2 P2 Project/G2-p2-project.ipynb
+++ b/2 P2 Project/G2-p2-project.ipynb
@@ -2783,13 +2783,16 @@
     "DROP VIEW IF EXISTS players_index_view;\n",
     "\n",
     "CREATE VIEW players_index_view AS\n",
-    "SELECT\n",
-    "    p.player_name\n",
-    "FROM\n",
+    "SELECT p.player_api_id, p.player_name, pa.max_date AS date\n",
+    "FROM \n",
     "    player p\n",
-    "    JOIN player_attributes a ON p.player_api_id = a.player_api_id\n",
-    "ORDER BY\n",
-    "    a.date DESC;"
+    "JOIN (\n",
+    "    SELECT player_api_id, MAX(date) AS max_date\n",
+    "    FROM player_attributes\n",
+    "    GROUP BY player_api_id\n",
+    ") pa\n",
+    "    ON p.player_api_id = pa.player_api_id\n",
+    "ORDER BY pa.max_date DESC;"
    ]
   },
   {
@@ -2843,8 +2846,10 @@
    ],
    "source": [
     "%%sql psql\n",
-    "CREATE INDEX date_idx ON player_attributes (date DESC);\n",
-    "CREATE INDEX player_api_id_idx ON player_attributes (player_api_id);\n",
+    "DROP INDEX IF EXISTS player_api_id_date_idx;\n",
+    "DROP INDEX IF EXISTS player_api_id_p_idx;\n",
+    "    \n",
+    "CREATE INDEX player_api_id_date_idx ON player_attributes (player_api_id, date DESC);\n",
     "CREATE INDEX player_api_id_p_idx ON player (player_api_id);"
    ]
   },
@@ -3015,24 +3020,30 @@
    "source": [
     "```python\n",
     "@app.route(\"/\", methods=(\"GET\",))\n",
-    "@app.route(\"/accounts\", methods=(\"GET\",))\n",
+    "@app.route(\"/players\", methods=(\"GET\",))\n",
     "@limiter.limit(\"1 per second\")\n",
-    "def account_index():\n",
-    "    \"\"\"Show all the accounts, most recent first.\"\"\"\n",
+    "def players_index():\n",
+    "    \"\"\"Show all the players, most recent date first.\"\"\"\n",
     "\n",
     "    with pool.connection() as conn:\n",
     "        with conn.cursor() as cur:\n",
-    "            accounts = cur.execute(\n",
+    "            players = cur.execute(\n",
     "                \"\"\"\n",
-    "                SELECT account_number, branch_name, balance\n",
-    "                FROM account\n",
-    "                ORDER BY account_number DESC;\n",
+    "                SELECT p.player_api_id, p.player_name, pa.max_date AS date\n",
+    "                FROM player p\n",
+    "                JOIN (\n",
+    "                    SELECT player_api_id, MAX(date) AS max_date\n",
+    "                    FROM player_attributes\n",
+    "                    GROUP BY player_api_id\n",
+    "                ) pa ON p.player_api_id = pa.player_api_id\n",
+    "                ORDER BY pa.max_date DESC\n",
+    "                LIMIT 20;\n",
     "                \"\"\",\n",
     "                {},\n",
     "            ).fetchall()\n",
     "            log.debug(f\"Found {cur.rowcount} rows.\")\n",
     "\n",
-    "    return render_template(\"account/index.html\", accounts=accounts)\n",
+    "    return render_template(\"players/index.html\", players=players)\n",
     "```"
    ]
   },
@@ -3054,22 +3065,22 @@
     "{% block header %}\n",
     "    <h1>\n",
     "        {% block title %}\n",
-    "            Accounts\n",
+    "            Players\n",
     "        {% endblock title %}\n",
     "    </h1>\n",
     "{% endblock header %}\n",
     "{% block content %}\n",
-    "    {% for account in accounts %}\n",
+    "    {% for player in players %}\n",
     "        <article class=\"post\">\n",
     "            <header>\n",
     "                <div>\n",
-    "                    <h1>{{ account['account_number'] }}</h1>\n",
-    "                    <div class=\"about\">in {{ account['branch_name'] }}</div>\n",
+    "                    <h1>{{ player['player_name'] }}</h1>\n",
+    "                    <div class=\"about\">API ID {{ player['player_api_id'] }}</div>\n",
     "                </div>\n",
     "                <a class=\"action\"\n",
-    "                   href=\"{{ url_for('account_update_view', account_number=account['account_number']) }}\">Edit</a>\n",
+    "                    href=\"{{ url_for('player_update_view', player_api_id=player['player_api_id']) }}\">Edit</a>\n",
     "            </header>\n",
-    "            <p class=\"body\">€ {{ account['balance'] }}</p>\n",
+    "            <p class=\"body\">Date: {{ player['date'] }}</p>\n",
     "        </article>\n",
     "        {% if not loop.last %}<hr />{% endif %}\n",
     "    {% endfor %}\n",
@@ -3107,7 +3118,31 @@
    "cell_type": "markdown",
    "id": "64",
    "metadata": {},
-   "source": []
+   "source": [
+    "``` python\n",
+    "@app.route(\"/players/<player_api_id>/update\", methods=(\"GET\",))\n",
+    "@limiter.limit(\"1 per second\")\n",
+    "def player_update_view(player_api_id):\n",
+    "    \"\"\"Show the page to update the player date.\"\"\"\n",
+    "\n",
+    "    with pool.connection() as conn:\n",
+    "        with conn.cursor() as cur:\n",
+    "            player = cur.execute(\n",
+    "                \"\"\"\n",
+    "                SELECT player_api_id\n",
+    "                FROM player_attributes\n",
+    "                WHERE player_api_id = %(player_api_id)s;\n",
+    "                \"\"\",\n",
+    "                {\"player_api_id\": player_api_id},\n",
+    "            ).fetchone()\n",
+    "            log.debug(f\"Found {cur.rowcount} rows.\")\n",
+    "\n",
+    "    # At the end of the `connection()` context, the transaction is committed\n",
+    "    # or rolled back, and the connection returned to the pool.\n",
+    "\n",
+    "    return render_template(\"players/update.html\", player=player)\n",
+    "```\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3121,7 +3156,35 @@
    "cell_type": "markdown",
    "id": "66",
    "metadata": {},
-   "source": []
+   "source": [
+    "``` html\n",
+    "{% extends \"base.html\" %}\n",
+    "{% block header %}\n",
+    "    <h1>\n",
+    "        {% block title %}\n",
+    "            Player {{ player['player_api_id'] }} | Edit\n",
+    "        {% endblock title %}\n",
+    "    </h1>\n",
+    "{% endblock header %}\n",
+    "{% block content %}\n",
+    "    <form method=\"post\">\n",
+    "        <label for=\"player_api_id\">Player API ID</label>\n",
+    "        <input name=\"player_api_id\"\n",
+    "                id=\"player_api_id\"\n",
+    "                type=\"text\"\n",
+    "                value=\"{{ request.form['player_api_id'] or player['player_api_id'] }}\"\n",
+    "                disabled />\n",
+    "        <label for=\"date\">Date</label>\n",
+    "        <input name=\"date\"\n",
+    "                id=\"date\"\n",
+    "                type=\"datetime-local\"\n",
+    "                step=\"1\"\n",
+    "                value=\"{{ request.form['date'] or player['date'] }}\"/>\n",
+    "        <input type=\"submit\" value=\"Save\" />\n",
+    "    </form>\n",
+    "{% endblock content %}\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3135,14 +3198,49 @@
    "cell_type": "markdown",
    "id": "68",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "@app.route(\"/players/<player_api_id>/update\", methods=(\"POST\",))\n",
+    "def player_update_save(player_api_id):\n",
+    "    \"\"\"Update the player date.\"\"\"\n",
+    "\n",
+    "    date = request.form[\"date\"]\n",
+    "\n",
+    "    error = None\n",
+    "\n",
+    "    if date == \"\":\n",
+    "        error = \"Date is required.\"\n",
+    "    elif not is_valid_date(date):\n",
+    "        error = \"Date is required to be in the format 'DD/MM/YYYY, HH:MM:SS'.\"\n",
+    "\n",
+    "    if error is not None:\n",
+    "        flash(error)\n",
+    "    else:\n",
+    "        date = date.replace(\"T\", \" \")   # Replace 'T' with a space\n",
+    "        with pool.connection() as conn:\n",
+    "            with conn.cursor() as cur:\n",
+    "                cur.execute(\n",
+    "                    \"\"\"\n",
+    "                    UPDATE player_attributes\n",
+    "                    SET date = %(date)s\n",
+    "                    WHERE player_api_id = %(player_api_id)s;\n",
+    "                    \"\"\",\n",
+    "                    {\"player_api_id\": player_api_id, \"date\": date},\n",
+    "                )\n",
+    "                # The result of this statement is persisted immediately by the database\n",
+    "                # because the connection is in autocommit mode.\n",
+    "\n",
+    "        # The connection is returned to the pool at the end of the `connection()` context but,\n",
+    "        # because it is not in a transaction state, no COMMIT is executed.\n",
+    "\n",
+    "    return redirect(url_for(\"players_index\"))\n",
+    "```"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69",
+   "cell_type": "markdown",
+   "id": "0c0fe443",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
