Ronaldo query improved

--- a/2 P2 Project/G2-p2-project.ipynb
+++ b/2 P2 Project/G2-p2-project.ipynb
@@ -605,15 +605,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "24",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-01T23:48:10.250994Z",
-     "iopub.status.busy": "2025-01-01T23:48:10.249987Z",
-     "iopub.status.idle": "2025-01-01T23:48:10.294616Z",
-     "shell.execute_reply": "2025-01-01T23:48:10.294212Z",
-     "shell.execute_reply.started": "2025-01-01T23:48:10.250953Z"
+     "iopub.execute_input": "2025-01-06T17:16:22.219251Z",
+     "iopub.status.busy": "2025-01-06T17:16:22.218845Z",
+     "iopub.status.idle": "2025-01-06T17:16:22.244810Z",
+     "shell.execute_reply": "2025-01-06T17:16:22.244426Z",
+     "shell.execute_reply.started": "2025-01-06T17:16:22.219237Z"
     }
    },
    "outputs": [
@@ -636,15 +636,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-01T23:48:13.073522Z",
-     "iopub.status.busy": "2025-01-01T23:48:13.073225Z",
-     "iopub.status.idle": "2025-01-01T23:48:13.115462Z",
-     "shell.execute_reply": "2025-01-01T23:48:13.114997Z",
-     "shell.execute_reply.started": "2025-01-01T23:48:13.073501Z"
+     "iopub.execute_input": "2025-01-06T17:16:24.422681Z",
+     "iopub.status.busy": "2025-01-06T17:16:24.422195Z",
+     "iopub.status.idle": "2025-01-06T17:16:24.584387Z",
+     "shell.execute_reply": "2025-01-06T17:16:24.581787Z",
+     "shell.execute_reply.started": "2025-01-06T17:16:24.422650Z"
     },
     "vscode": {
      "languageId": "sql"
@@ -1711,7 +1711,7 @@
        "+------------------+---------+----------+-----------------------------------+---------------+---------+"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,17 +1748,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "29",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-06T17:33:17.385730Z",
+     "iopub.status.busy": "2025-01-06T17:33:17.385492Z",
+     "iopub.status.idle": "2025-01-06T17:33:17.435198Z",
+     "shell.execute_reply": "2025-01-06T17:33:17.432528Z",
+     "shell.execute_reply.started": "2025-01-06T17:33:17.385716Z"
+    },
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>team_short_name</th>\n",
+       "            <th>team_long_name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>MUN</td>\n",
+       "            <td>Manchester United</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>REA</td>\n",
+       "            <td>Real Madrid CF</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-----------------+-------------------+\n",
+       "| team_short_name |   team_long_name  |\n",
+       "+-----------------+-------------------+\n",
+       "|       MUN       | Manchester United |\n",
+       "|       REA       |   Real Madrid CF  |\n",
+       "+-----------------+-------------------+"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql psql\n",
-    "-- WILL NOT BE EVALUATED - We will be implementing a solution for this problem in the next section."
+    "-- WILL NOT BE EVALUATED - We will be implementing a solution for this problem in the next section.\n",
+    "WITH selected_player AS (\n",
+    "    SELECT player_api_id\n",
+    "    FROM Player\n",
+    "    WHERE player_name = 'Cristiano Ronaldo'\n",
+    ")\n",
+    "SELECT DISTINCT t.team_short_name, t.team_long_name\n",
+    "FROM match m\n",
+    "JOIN team t\n",
+    "  ON (m.home_team_api_id = t.team_api_id AND (\n",
+    "        m.home_player_1 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_2 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_3 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_4 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_5 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_6 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_7 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_8 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_9 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_10 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.home_player_11 = (SELECT player_api_id FROM selected_player)\n",
+    "      ))\n",
+    "  OR (m.away_team_api_id = t.team_api_id AND (\n",
+    "        m.away_player_1 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_2 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_3 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_4 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_5 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_6 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_7 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_8 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_9 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_10 = (SELECT player_api_id FROM selected_player) OR\n",
+    "        m.away_player_11 = (SELECT player_api_id FROM selected_player)\n",
+    "      ))\n",
+    ";\n"
    ]
   },
   {
