--- a/2 P1 Project/2-p1-project.ipynb
+++ b/2 P1 Project/2-p1-project.ipynb
@@ -98,11 +98,11 @@
    "id": "10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-06T19:02:14.805236Z",
-     "iopub.status.busy": "2024-12-06T19:02:14.804209Z",
-     "iopub.status.idle": "2024-12-06T19:02:15.217401Z",
-     "shell.execute_reply": "2024-12-06T19:02:15.216872Z",
-     "shell.execute_reply.started": "2024-12-06T19:02:14.805197Z"
+     "iopub.execute_input": "2024-12-08T13:01:13.325721Z",
+     "iopub.status.busy": "2024-12-08T13:01:13.325449Z",
+     "iopub.status.idle": "2024-12-08T13:01:13.652381Z",
+     "shell.execute_reply": "2024-12-08T13:01:13.652084Z",
+     "shell.execute_reply.started": "2024-12-08T13:01:13.325701Z"
     },
     "tags": []
    },
@@ -127,69 +127,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "11",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-08T16:24:58.930706Z",
+     "iopub.status.busy": "2024-12-08T16:24:58.929568Z",
+     "iopub.status.idle": "2024-12-08T16:24:59.056777Z",
+     "shell.execute_reply": "2024-12-08T16:24:59.056385Z",
+     "shell.execute_reply.started": "2024-12-08T16:24:58.930662Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql+psycopg://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql+psycopg://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
-    "DROP TABLE IF EXISTS address;\n",
-    "DROP TABLE IF EXISTS client;\n",
-    "DROP TABLE IF EXISTS c_lives;\n",
-    "DROP TABLE IF EXISTS owner;\n",
-    "DROP TABLE IF EXISTS animal;\n",
-    "DROP TABLE IF EXISTS owns;\n",
-    "DROP TABLE IF EXISTS cat;\n",
-    "DROP TABLE IF EXISTS dog;\n",
-    "DROP TABLE IF EXISTS doctor;\n",
-    "DROP TABLE IF EXISTS d_lives;\n",
-    "DROP TABLE IF EXISTS assistant;\n",
-    "DROP TABLE IF EXISTS a_lives;\n",
-    "DROP TABLE IF EXISTS visit;\n",
-    "DROP TABLE IF EXISTS a_goes_to;\n",
-    "DROP TABLE IF EXISTS c_goes_to;\n",
-    "DROP TABLE IF EXISTS conducts;\n",
-    "DROP TABLE IF EXISTS participates;\n",
-    "DROP TABLE IF EXISTS diagnostic;\n",
-    "DROP TABLE IF EXISTS requires;\n",
-    "DROP TABLE IF EXISTS prescription;\n",
-    "DROP TABLE IF EXISTS based_on;\n",
-    "DROP TABLE IF EXISTS medication;\n",
-    "DROP TABLE IF EXISTS contains;\n",
-    "DROP TABLE IF EXISTS soap;\n",
-    "DROP TABLE IF EXISTS described_by;\n",
-    "DROP TABLE IF EXISTS procedure;\n",
-    "DROP TABLE IF EXISTS radiography;\n",
-    "DROP TABLE IF EXISTS surgical;\n",
-    "DROP TABLE IF EXISTS test;\n",
-    "DROP TABLE IF EXISTS indicator;\n",
-    "DROP TABLE IF EXISTS measured_through;\n",
-    "DROP TABLE IF EXISTS involve;\n",
+    "DROP TABLE IF EXISTS \n",
+    "    measured_through,\n",
+    "    performed_by,\n",
+    "    indicator,\n",
+    "    radiography,\n",
+    "    surgical,\n",
+    "    test,\n",
+    "    procedure,\n",
+    "    soap,\n",
+    "    contains,\n",
+    "    medication,\n",
+    "    based_on,\n",
+    "    prescription,\n",
+    "    requires,\n",
+    "    diagnostic,\n",
+    "    participates,\n",
+    "    conducts,\n",
+    "    go_to,\n",
+    "    visit,\n",
+    "    a_lives,\n",
+    "    assistant,\n",
+    "    d_lives,\n",
+    "    doctor,\n",
+    "    cat,\n",
+    "    dog,\n",
+    "    animal,\n",
+    "    owner,\n",
+    "    c_lives,\n",
+    "    client,\n",
+    "    address\n",
+    "CASCADE;\n",
     "\n",
     "CREATE TABLE address (\n",
-    "    street Varchar(80),\n",
-    "    number Integer NOT NULL,\n",
+    "    street Varchar(255),\n",
+    "    number Char(4) NOT NULL,\n",
     "    postcode Varchar(10),\n",
-    "    city Varchar(50),\n",
+    "    city Varchar(30),\n",
     "    PRIMARY KEY (street, postcode, city)\n",
     ");\n",
     "\n",
     "CREATE TABLE client (\n",
     "    tin Integer,\n",
     "    name Varchar(80) NOT NULL,\n",
-    "    phone Numeric(9) NOT NULL,\n",
-    "    PRIMARY KEY (tin)\n",
+    "    phone Numeric(9),\n",
+    "    PRIMARY KEY (tin),\n",
+    "    UNIQUE (phone)\n",
     ");\n",
     "\n",
     "CREATE TABLE c_lives (\n",
     "    tin Integer,\n",
-    "    street Varchar(80) NOT NULL,\n",
-    "    postcode Varchar(10) NOT NULL,\n",
-    "    city Varchar(50) NOT NULL,\n",
+    "    street Varchar(255),\n",
+    "    postcode Varchar(10),\n",
+    "    city Varchar(30),\n",
     "    PRIMARY KEY (tin),\n",
     "    FOREIGN KEY (tin) REFERENCES client(tin),\n",
-    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, number)\n",
+    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, city)\n",
     ");\n",
     "\n",
     "CREATE TABLE owner (\n",
@@ -208,14 +252,8 @@
     "    birthdate Date NOT NULL,\n",
     "    PRIMARY KEY (tin, name),\n",
     "    FOREIGN KEY (tin) REFERENCES owner(tin)\n",
-    ");\n",
-    "\n",
-    "CREATE TABLE owns (\n",
-    "    tin Integer,\n",
-    "    name Varchar(80),\n",
-    "    PRIMARY KEY (tin, name),\n",
-    "    FOREIGN KEY (tin) REFERENCES owner(tin),\n",
-    "    FOREIGN KEY (name) REFERENCES animal(name)\n",
+    "    -- For Cat and Dog species is None\n",
+    "    -- An Animal may only be a Dog or a Cat only if type is Mammals\n",
     ");\n",
     "\n",
     "CREATE TABLE cat (\n",
@@ -240,34 +278,36 @@
     "    phone Numeric(9),\n",
     "    specialization Varchar(80),\n",
     "    biographic_description Varchar(80),\n",
-    "    PRIMARY KEY (omv)\n",
+    "    PRIMARY KEY (omv),\n",
+    "    UNIQUE (phone)\n",
     ");\n",
     "\n",
     "CREATE TABLE d_lives (\n",
     "    omv Integer,\n",
-    "    street Varchar(80),\n",
+    "    street Varchar(255),\n",
     "    postcode Varchar(10),\n",
-    "    city Varchar(50),\n",
+    "    city Varchar(30),\n",
     "    PRIMARY KEY (omv),\n",
     "    FOREIGN KEY (omv) REFERENCES doctor(omv),\n",
-    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, number)\n",
+    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, city)\n",
     ");\n",
     "\n",
     "CREATE TABLE assistant (\n",
     "    aid Integer,\n",
     "    name Varchar(80) NOT NULL,\n",
-    "    phone Numeric(9) NOT NULL,\n",
-    "    PRIMARY KEY (aid)\n",
+    "    phone Numeric(9),\n",
+    "    PRIMARY KEY (aid),\n",
+    "    UNIQUE (phone)\n",
     ");\n",
     "\n",
     "CREATE TABLE a_lives (\n",
     "    aid Integer,\n",
-    "    street Varchar(80),\n",
+    "    street Varchar(255),\n",
     "    postcode Varchar(10),\n",
-    "    city Varchar(50),\n",
+    "    city Varchar(30),\n",
     "    PRIMARY KEY (aid),\n",
     "    FOREIGN KEY (aid) REFERENCES assistant(aid),\n",
-    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, number)\n",
+    "    FOREIGN KEY (street, postcode, city) REFERENCES address(street, postcode, city)\n",
     ");\n",
     "\n",
     "CREATE TABLE visit (\n",
@@ -276,22 +316,16 @@
     "    PRIMARY KEY (idv)\n",
     ");\n",
     "\n",
-    "CREATE TABLE a_goes_to (\n",
-    "    tin Integer,\n",
+    "CREATE TABLE go_to (\n",
+    "    client_tin Integer,\n",
+    "    owner_tin Integer,\n",
     "    name Varchar(80),\n",
     "    idv Integer,\n",
     "    weight Numeric(3,2) NOT NULL,\n",
     "    PRIMARY KEY (idv),\n",
     "    FOREIGN KEY (idv) REFERENCES visit(idv),\n",
-    "    FOREIGN KEY (tin, name) REFERENCES animal(tin, name)\n",
-    ");\n",
-    "\n",
-    "CREATE TABLE c_goes_to (\n",
-    "    idv Integer,\n",
-    "    tin Integer,\n",
-    "    PRIMARY KEY (idv),\n",
-    "    FOREIGN KEY (idv) REFERENCES visit(idv),\n",
-    "    FOREIGN KEY (tin) REFERENCES client(omv)\n",
+    "    FOREIGN KEY (owner_tin, name) REFERENCES animal(tin, name),\n",
+    "    FOREIGN KEY (client_tin) REFERENCES client(tin)\n",
     ");\n",
     "\n",
     "CREATE TABLE conducts (\n",
@@ -311,16 +345,18 @@
     ");  \n",
     "\n",
     "CREATE TABLE diagnostic (\n",
-    "    code Varchar(10),\n",
+    "    code Char(10),\n",
     "    description Varchar(120) NOT NULL,\n",
     "    PRIMARY KEY (code)\n",
+    "    -- Every code must be standardized\n",
     ");\n",
     "\n",
     "CREATE TABLE requires (\n",
     "    idv Integer,\n",
     "    code Varchar(10),\n",
     "    PRIMARY KEY (idv),\n",
-    "    FOREIGN KEY (idv) REFERENCES visit(idv)\n",
+    "    FOREIGN KEY (idv) REFERENCES visit(idv),\n",
+    "    FOREIGN KEY (code) REFERENCES diagnostic(code)\n",
     ");\n",
     "\n",
     "CREATE TABLE prescription (\n",
@@ -361,14 +397,6 @@
     "    FOREIGN KEY (idv) REFERENCES visit(idv)\n",
     ");\n",
     "\n",
-    "CREATE TABLE described_by (\n",
-    "    idv Integer,\n",
-    "    objective Varchar(120),\n",
-    "    PRIMARY KEY (idv),\n",
-    "    FOREIGN KEY (idv) REFERENCES visit(idv),\n",
-    "    FOREIGN KEY (objective) REFERENCES soap(objective)\n",
-    ");\n",
-    "\n",
     "CREATE TABLE procedure (\n",
     "    idv Integer,\n",
     "    description Varchar(80),\n",
@@ -400,15 +428,12 @@
     ");\n",
     "\n",
     "CREATE TABLE indicator (\n",
-    "    idv Integer,\n",
-    "    description Varchar(80),\n",
     "    name Varchar(80),\n",
     "    unit Varchar(5) NOT NULL,\n",
     "    ref_min Numeric(3,2) NOT NULL,\n",
     "    ref_max Numeric(3,2) NOT NULL,\n",
     "    description_ref_value Varchar(80) NOT NULL,\n",
-    "    PRIMARY KEY (idv, description, name),\n",
-    "    FOREIGN KEY (idv, description) REFERENCES test(idv, description)\n",
+    "    PRIMARY KEY (name)\n",
     ");\n",
     "\n",
     "CREATE TABLE measured_through (\n",
@@ -421,11 +446,13 @@
     "    FOREIGN KEY (name) REFERENCES indicator(name)\n",
     ");\n",
     "\n",
-    "CREATE TABLE involve (\n",
+    "CREATE TABLE performed_by (\n",
+    "    aid Integer,\n",
     "    idv Integer,\n",
     "    description Varchar(80),\n",
     "    PRIMARY KEY (idv, description),\n",
-    "    FOREIGN KEY (idv, description) REFERENCES test(idv, description)\n",
+    "    FOREIGN KEY (idv, description) REFERENCES procedure(idv, description),\n",
+    "    FOREIGN KEY (aid) REFERENCES assistant(aid)\n",
     ");"
    ]
   }
@@ -446,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
